syntax = "proto3";

//  package model;

enum    HomeType {
    MAILING = 0;
    BILLING = 1;
}

message Address {
    int32       id      = 1;
    string      number  = 2;
    string      street  = 3;
    string      city    = 4;
    string      state   = 5;
    string      zip     = 6;
    string      country = 7;
    HomeType    type    = 8;
}

enum    PhoneType {
    HOME    = 0;
    CELL    = 1;
    WORK    = 2;
}

message PhoneNumber {
    int32       id      = 1;
    string      number  = 2;
    PhoneType   type    = 3;
}

message Contact {
    int32       id          = 1;
    string      relationship  = 2;
    string      name        = 3;

    repeated
    Address     addresses   = 4;
    repeated
    PhoneNumber phoneNumbers= 5;
}

enum    Status {
    DEAD  = 0;
    ALIVE = 1;
}

enum    Gender {
    MALE    = 0;
    FEMALE  = 1;
}

message Date {
    int32   year    = 1;
    int32   month   = 2;
    int32   day     = 3;
}

message Patient {
    int32       id          = 1;
    Status      status      = 2;
    string      name        = 3;
    Gender      gender      = 4;
    Date        birthDay    = 5;
    optional
    Date        deceasedOn  = 6;
    bool        maritalStatus = 7;
    string      preferredLanguage = 8;
    Date        activeFrom  = 9;
    optional
    Date        activeThru  = 10;
    
    repeated
    Contact     contacts    = 11;
    repeated
    Address     addresses   = 12;
    repeated
    PhoneNumber phoneNumbers= 13;
}

//  SEE: https://protobuf.dev/programming-guides/techniques/#large-data
//  SEE: https://github.com/grpc/grpc/tree/master/examples/python/compression

